v2.3.1 "Centaur" (2017-ABC-NM)
------------------------------
* Evolved the factory pattern for Num implementations to a (kind of) abstract factory pattern for simplified code and improved extensibility. 

v2.3.0 "Centaur" (2017-Jan-11)
------------------------------
* Rework of the number abstraction layer in unikl.disco.numbers:
  The DiscoDNC is now built on a factory pattern with four implementations -- the lower body and the four legs of our new Centaur release. 
  - Num.java is now an interface to be implemented by the actual number representations in unikl.disco.numbers.implementations.
  - NumFactory.java provides methods to create a number, takes care of the representation given in the CalculatorConfig.
  - NumUtils.java provides methods to work with objects implementing the Num interface.
  - unikl.disco.numbers.implementations provides four implementations:
    - Real numbers with single precision or double precision.
    	- Both provide a flag to account for potential rounding errors when comparing numbers (comparison_epsilon).
    - Rational numbers based on Integer or BigInteger (requires Apache Commons Math 3 and special values in unikl.disco.numbers.values). 
* Convolution.java: Improvements for convolution involving \delta_T.
* Functional Tests: Further streamlined test configuration generation.
* Curve.java: isBurstDelay() was removed, functionality is provided by isDelayedInfiniteBurst() since version 2.2.7.
* Network.java: Fixed getting a server by its ID (had an offset of +1 before).
* Removed methods that were deprecated in v2.2.
* Path.java: Renamed createNullPath to createEmptyPath.
* Updated the output tests (also serves as the demo for saving a network and reusing it).
* Better distinction between number zero and null objects: 
  - Renamed *null{Segment,Curve,ArrivalCurve,ServiceCurve,MaxServiceCurve}* to *zero{Segment,Curve,ArrivalCurve,ServiceCurve,MaxServiceCurve} *